Completed the updates section for (users and books collection) CRUD operation. (Daniel C. Opute)
