# controllers/user.js
@@ -1,6 +1,7 @@
 // IMPORT REQUIRED MODULES
 const mongodb = require('../models/db/connect-db');
 const bcrypt = require('bcryptjs');
+const ObjectId = require('mongodb').ObjectId;
 
 // CONSTANTS
 const dbName = process.env.DB_NAME;  // store database name
@@ -84,7 +85,78 @@ userController.findOrCreateOAuthProviderProfile = async function(oAuthProviderNa
 // Update a User
 userController.updateAUser = async function(req, res) {
     //#swagger.tags=['User routes']
-    
+    // get logged in user Id
+    const userId = new ObjectId(req.session.user._id);
+
+    let userObject = {
+        _id: userId,
+        firstname: req.body.firstname,
+        lastname: req.body.lastname,
+        email: req.body.email,
+        profilePhotoUrl: req.body.profilePhotoUrl,
+        bio: req.body.bio,
+        username: req.body.username == 'any' || req.body.username == 'null' ? null : req.body.username,
+        password: req.body.password == 'any' || req.body.password == 'null' ? null : bcrypt.hashSync(req.body.password),
+        oAuthProvider: req.session.user.oAuthProvider,
+        providerUserId : req.session.user.providerUserId,
+        accountType: req.session.user.accountType,
+        createdAt : req.session.user.createdAt,
+        updated: []
+    };
+
+    try {
+        // get the previouse user timestamp and add to updateTimestamp list, to be used for the update
+        const dataResult = await mongodb.getDb().db(dbName).collection(userCollectionName).find({ _id: userId });
+        dataResult.toArray((err)=> {
+            if (err) {
+                logError(err);
+                return res.status(400).json({message: err});
+            }
+        }).then(async (userData) => {
+            // check if array is empty
+            console.log(`Users: ${userData}`);  // for debugging purpose
+            if (userData == null || userData == [] || userData == '') {
+                return res.status(404).json({message: `User with id: ${userId}; Not found, or is empty`});  // for debugging purpose
+            }
+            // add timestamps to update
+            userObject.updated = userData[0].updated != undefined ? [...userData[0].updated, Date.now()] : [Date.now()];
+            console.log(`updateUserObject: ${JSON.stringify(userObject)}`);  // for debugging purpose
+
+            // check and update values with their current values if they fall in the following conditions
+            const userFirstName = userObject.firstname.trim().toLowerCase();
+            const userLastName = userObject.lastname.trim().toLowerCase();
+            const userEmail = userObject.email.trim().toLowerCase();
+            const userUsername = userObject.username.trim().toLowerCase();
+            const userPassword = userObject.password.trim().toLowerCase();
+            const userBio = userObject.bio.trim().toLowerCase();
+            const userProfilePic = userObject.profilePhotoUrl.trim().toLowerCase();
+
+            userFirstName == null || userFirstName == 'null' || userFirstName == 'any' || userFirstName == '' ? userObject.firstname = userData[0].firstname : userObject.firstname = userFirstName;
+            userLastName == null || userLastName == 'null' || userLastName == 'any' || userLastName == '' ? userObject.lastname = userData[0].lastname : userObject.lastname = userLastName;
+            userEmail == null || userEmail == 'null' || userEmail == 'any' || userEmail == '' ? userObject.email = userData[0].email : userObject.email = userEmail;
+            userUsername == null || userUsername == 'null' || userUsername == 'any' || userUsername == '' ? userObject.username = userData[0].username : userObject.username = userUsername;
+            userPassword == null || userPassword == 'null' || userPassword == 'any' || userPassword == '' ? userObject.password = userData[0].password : userObject.password = userPassword;
+            userBio == null || userBio == 'null' || userBio == 'any' || userBio == '' ? userObject.bio = userData[0].bio : userObject.bio = userBio;
+            userProfilePic == null || userProfilePic == 'null' || userProfilePic == 'any' || userProfilePic == '' ? userObject.profilePhotoUrl = userData[0].profilePhotoUrl : userObject.profilePhotoUrl = userProfilePic;
+            
+
+            // update db with UserObject
+            const response = await mongodb.getDb().db(dbName).collection(userCollectionName).replaceOne({_id: userId}, userObject);
+            console.log(response);  // for visualizing and testing purpose
+            if (response.acknowledged && response.modifiedCount > 0) {
+                const msg = `User with User-id: ${userId}; has been updated successfully`;
+                console.log(msg);  // testing purpose
+                res.status(200).send({message: msg});
+            } else {
+                const msg = `fail to update User with User-id: ${userId};\nPosible Error: Provided User id not found: ${userId}`;
+                console.log(msg);  // for testing purpose
+                res.status(404).send({message: msg});
+            }
+        })
+    } catch (err) {
+        console.error(err);
+        res.status(500).json(err) || "Error occured while updating User";
+    }
 }
 
 // Delete a User
